# wasm-audio-visualizer

./: .gitignore  .gitmodules  ARCHITECTURE.md  CMakeLists.txt  LICENSE  PERFORMANCE.md  README.md  README_DEPRECATED.md  build.sh  index.html  package-lock.json  package.json  pure-js-dft.html  pure-js-fft.html  pure-js.html  serve.sh  vite.config.js
.github/workflows/: deploy.yml
.serena/: project.yml
include/: audio_analyzer.h  audio_buffer.h  audio_decoder.h  memory_pool.h  waveform_generator.h
public/: audio-visualizer.js  audio-visualizer.wasm  audio-visualizer.wasm.map
src/cpp/bindings/: wasm_api.cpp
src/cpp/core/: audio_analyzer.cpp  audio_buffer.cpp  audio_decoder.cpp  waveform_generator.cpp
src/cpp/utils/: memory_pool.cpp
src/web/: index.html
src/web/js/: audio-player.js  main.js  performance-monitor.js  pure-fft.js  pure-js-dft-main.js  pure-js-fft-main.js  pure-js-main.js  ui-controls.js  visualizer-3d.js
